@@ -1,3 +1,9 @@
+2017-11-16  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* chopstx-cortex-m.c (idle): Support WFE.
+	* mcu/usb-stm32f103.c (usb_lld_init): Use event.
+	* usb_lld.h (INTR_REQ_USB_WAKEUP): Remove.
+
 2017-11-15  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* usb_lld.h (INTR_REQ_USB_WAKEUP): New.
